--- a/demo.html
+++ b/demo.html
@@ -3,17 +3,30 @@
   <head>
     <title>SVGene - An svg gene cluster visualization library in JavaScript</title>
     <style>
-      .genetype-other {
+      .svgene-type-other {
         fill: gray;
         stroke: black;
       }
-      .genetype-biosynthetic {
+      .svgene-type-biosynthetic {
         fill: #810e15;
         stroke: black;
       }
-      .geneline {
+      .svgene-line {
         stroke-width: 1px;
         stroke: #888;
+      }
+      .svgene-locustag {
+        fill: #810e15;
+        display: none;
+      }
+      .svgene-tooltip {
+        border: 1px solid slategray;
+        background-color: #ddd;
+        display: none;
+        position: absolute;
+        font-size: 80%;
+        padding: 0.5em;
+        color: #810e15;
       }
     </style>
   </head>
@@ -23,17 +36,24 @@
     <div id="cluster1"></div>
     <h3>and small.</h3>
     <div id="cluster2"></div>
+    <script src="lib/jquery.js"></script>
     <script src="lib/d3.v2.js"></script>
     <script src="src/svgene.js"></script>
     <script type="text/javascript">
 
       var orfs = [
-        { start: 245986, end: 246783, strand:  1, locus_tag: "SCO0256", type: "other" },
-        { start: 246868, end: 247869, strand:  1, locus_tag: "SCO0257", type: "other" },
-        { start: 256281, end: 256442, strand:  1, locus_tag: "SCO0268", type: "other" },
-        { start: 256526, end: 259687, strand:  1, locus_tag: "SCO0269", type: "biosynthetic" },
-        { start: 259684, end: 261084, strand:  1, locus_tag: "SCO0270", type: "biosynthetic" },
-        { start: 269020, end: 269688, strand: -1, locus_tag: "SCO0277", type: "other" }
+        { start: 245986, end: 246783, strand:  1, locus_tag: "SCO0256", type: "other",
+          description: 'short chain oxidoreductase<br>smCOG: SMCOG1001 (short-chain dehydrogenase/reductase SDR)<br>Location: 245986-246783' },
+        { start: 246868, end: 247869, strand:  1, locus_tag: "SCO0257", type: "other",
+          description: 'hypothetical protein<br>smCOG: -<br>Location: 246868-247869' },
+        { start: 256281, end: 256442, strand:  1, locus_tag: "SCO0268", type: "other",
+          description: 'hypothetical protein<br>smCOG: -<br>Location: 256281-256442' },
+        { start: 256526, end: 259687, strand:  1, locus_tag: "SCO0269", type: "biosynthetic",
+          description: 'hypothetical protein<br>smCOG: SMCOG1155 (Lantibiotic dehydratase domain protein)<br>Location: 256526-259687' },
+        { start: 259684, end: 261084, strand:  1, locus_tag: "SCO0270", type: "biosynthetic",
+          description: 'hypothetical protein<br>smCOG: SMCOG1140 (Lanthionine synthetase C family protein)<br>Location: 259684-261084' },
+        { start: 269020, end: 269688, strand: -1, locus_tag: "SCO0277", type: "other",
+          description: 'hypothetical protein<br>smCOG: -<br>Location: 269020-269688' }
       ];
       var cluster = { start: 245986, end: 271748, idx: 1, orfs: orfs };
 
