Prepare for multi-cluster output
Signed-off-by: Kai Blin <kai@samba.org>

--- a/demo.html
+++ b/demo.html
@@ -57,8 +57,8 @@
       ];
       var cluster = { start: 245986, end: 271748, idx: 1, orfs: orfs };
 
-      svgene.drawCluster("cluster1", cluster, 50, 1200);
-      svgene.drawCluster("cluster2", cluster, 20, 700);
+      svgene.drawClusters("cluster1", [cluster], 50, 1200);
+      svgene.drawClusters("cluster2", [cluster], 20, 700);
     </script>
   </body>
 </html>
