More correctly calculate the tooltip offset
Signed-off-by: Kai Blin <kai@samba.org>

--- a/demo.html
+++ b/demo.html
@@ -73,7 +73,7 @@
       ];
       var cluster2 = { start: 245986, end: 271748, idx: 2, orfs: orfs2 };
       svgene.drawClusters("cluster1", [cluster, cluster2], 50, 1200);
-      svgene.drawClusters("cluster2", [cluster, cluster2], 20, 700);
+      svgene.drawClusters("cluster2", [cluster, cluster2, cluster2, cluster], 20, 700);
     </script>
   </body>
 </html>
