Allow to explicitly specify color for ORFs
Signed-off-by: Kai Blin <kai@samba.org>

--- a/demo.html
+++ b/demo.html
@@ -42,7 +42,7 @@
     <script type="text/javascript">
 
       var orfs = [
-        { start: 245986, end: 246783, strand:  1, locus_tag: "SCO0256", type: "other",
+        { start: 245986, end: 246783, strand:  1, locus_tag: "SCO0256", type: "other", color: "tomato",
           description: 'short chain oxidoreductase<br>smCOG: SMCOG1001 (short-chain dehydrogenase/reductase SDR)<br>Location: 245986-246783' },
         { start: 246868, end: 247869, strand:  1, locus_tag: "SCO0257", type: "other",
           description: 'hypothetical protein<br>smCOG: -<br>Location: 246868-247869' },
@@ -52,7 +52,7 @@
           description: 'hypothetical protein<br>smCOG: SMCOG1155 (Lantibiotic dehydratase domain protein)<br>Location: 256526-259687' },
         { start: 259684, end: 261084, strand:  1, locus_tag: "SCO0270", type: "biosynthetic",
           description: 'hypothetical protein<br>smCOG: SMCOG1140 (Lanthionine synthetase C family protein)<br>Location: 259684-261084' },
-        { start: 269020, end: 269688, strand: -1, locus_tag: "SCO0277", type: "other",
+        { start: 269020, end: 269688, strand: -1, locus_tag: "SCO0277", type: "other", color: "mediumpurple",
           description: 'hypothetical protein<br>smCOG: -<br>Location: 269020-269688' }
       ];
       var cluster = { start: 245986, end: 271748, idx: 1, orfs: orfs };
