Display cluster labels
Signed-off-by: Kai Blin <kai@samba.org>

--- a/demo.html
+++ b/demo.html
@@ -19,6 +19,9 @@
         fill: #810e15;
         display: none;
       }
+      .svgene-clusterlabel {
+        fill: #810e15;
+      }
       .svgene-tooltip {
         border: 1px solid slategray;
         background-color: #ddd;
@@ -55,7 +58,7 @@
         { start: 269020, end: 269688, strand: -1, locus_tag: "SCO0277", type: "other", color: "mediumpurple",
           description: 'hypothetical protein<br>smCOG: -<br>Location: 269020-269688' }
       ];
-      var cluster = { start: 245986, end: 271748, idx: 1, orfs: orfs };
+      var cluster = { start: 245986, end: 271748, idx: 1, orfs: orfs, label: 'First cluster'};
 
       var orfs2 = [
         { start: 245986, end: 246783, strand:  -1, locus_tag: "SCO0256", type: "other",
