--- a/demo.html
+++ b/demo.html
@@ -49,7 +49,7 @@
           description: 'short chain oxidoreductase<br>smCOG: SMCOG1001 (short-chain dehydrogenase/reductase SDR)<br>Location: 245986-246783' },
         { start: 246868, end: 247869, strand:  1, locus_tag: "SCO0257.2", type: "other",
           description: 'hypothetical protein<br>smCOG: -<br>Location: 246868-247869' },
-        { start: 256281, end: 256442, strand:  1, locus_tag: "SCO0268", type: "other",
+        { start: 256281, end: 256442, strand:  1, locus_tag: "SCO0268-orf_1", type: "other",
           description: 'hypothetical protein<br>smCOG: -<br>Location: 256281-256442' },
         { start: 256526, end: 259687, strand:  1, locus_tag: "SCO0269", type: "biosynthetic",
           description: 'hypothetical protein<br>smCOG: SMCOG1155 (Lantibiotic dehydratase domain protein)<br>Location: 256526-259687' },
