Add d3 library file and remove unused code

--- a/demo.html
+++ b/demo.html
@@ -48,8 +48,7 @@
     <h3>And unordered</h3>
     <div id="cluster3"></div>
     <script src="lib/jquery.js"></script>
-    <script src="https://unpkg.com/d3"></script>
-    <!--<script src="lib/d3.v2.js"></script>  d3v2-->
+    <script src="lib/d3.v4.min.js"></script>
     <script src="src/svgene.js"></script>
     <script type="text/javascript">
 
